5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1595_825.log
== TEST (2019-04-11 01:00:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("Raio: "))


area=pi*raio**2


volume=4/3*pi*raio**3


print(round(x, 3)area)
print(round(x, 3)volume)
-- ERROR:
File "XXXX", line 13
    print(round(x, 3)area)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 01:00:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("Raio: "))


area=pi*raio**2


volume=4/3*pi*raio**3


print(area)
print(volume)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    area=pi*raio**2
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 01:00:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("Raio: "))


area=pi*raio**2


volume=4/3*pi*raio**3


print(area)
print(volume)
-- EXECUTION TIME:
0.127232
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/825/main.py", line 7, in <module>
    area=pi*raio**2
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 01:03:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("Raio: "))


area=pi*raio**2


volume=4/3*pi*raio**3


print(round(area, 3)
print(round(volume, 3)
-- ERROR:
File "XXXX", line 14
    print(round(volume, 3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 01:04:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("Raio: "))


area=pi*raio**2


volume=4/3*pi*raio**3


print(round(x, 3)
print(round(x, 3)
-- ERROR:
File "XXXX", line 14
    print(round(x, 3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 01:05:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("Raio: "))


area=pi*raio**2


volume=4/3*pi*raio**3


print(round(x, 3))
print(round(x, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    area=pi*raio**2
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 01:05:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("Raio: "))


area=pi*raio**2


volume=4/3*pi*raio**3


print(round(area, 3))
print(round(volume, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    area=pi*raio**2
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 01:07:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("Raio: "))


area= pi*raio**2


volume=4/3*pi*raio**3


print(round(area, 3))
print(round(volume, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    area= pi*raio**2
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 01:07:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("Raio: "))


area= pi*raio**2


volume=4/3*pi*raio**3


print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME:
0.149416
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/825/main.py", line 7, in <module>
    area= pi*raio**2
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:53:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.raio=float(input("Raio: "))
from math import*
raio=float(input("r: "))
area= pi*raio**2
volume=4/3*pi*raio**3


print(round(area, 3))
print(round(volume, 3))
-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 15:54:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.raio=float(input("Raio: "))
from math import*
raio=float(input("r: "))
area= pi*raio**2
volume=4/3*pi*raio**3


print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME:
0.146585
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
